--- a/PFDmap/PFDwithExcel.Rmd
+++ b/PFDmap/PFDwithExcel.Rmd
@@ -1,9 +1,9 @@
 Spatial distribution mapper
 ========================================================
-```{r eval = TRUE, echo = FALSE}
+```{r eval = TRUE}
 opts_chunk$set(eval = TRUE,
                error = FALSE,
-               prompt = TRUE,
+               prompt = FALSE,
                message = FALSE,
                fig.hight = 10,
                fig.width = 12,
@@ -28,11 +28,9 @@ Colnum <-
   readline("Enter number of light color. ")  
 chamID <-
   readline("Enter id of the chamber. ") 
-filePath <- 
-  readline("Enter the full path to data folder. ") 
 
 PFD_summary <-
-  lapply(1:Colnum, function(i){
+   lapply(1:Colnum, function(i){
   
   input <-
     dir(filePath, pattern = "xlsx", full.names = T) %>%
@@ -52,7 +50,7 @@ PFD_summary <-
     unlist != 0
   
   ColIDs <-
-    (0:(dim(data)[2]-1) * as.numeric(as.character(remarks[5, 2]))) %>%
+    (0:(sum(ColWithValues)-1) * as.numeric(as.character(remarks[5, 2]))) %>%
     sprintf(fmt = "%02.0f") %>%
     paste0(., " cm")
   
@@ -62,7 +60,7 @@ PFD_summary <-
     unlist != 0
   
   RowIDs <-
-    ((dim(data)[1]-1):0 * as.numeric(as.character(remarks[5, 2]))) %>%
+    ((sum(RowWithValues)-1):0 * as.numeric(as.character(remarks[5, 2]))) %>%
     sprintf(fmt = "%02.0f") %>%
     paste0(., " cm")
   
@@ -90,38 +88,44 @@ PFD_summary <-
   
   PFDmap <-
     PFDdata %>%
-    ggplot(aes(x = variable, y = Rows, fill = value)) +
+    set_names(c("Rows", "Cols", "value", "numeric")) %>%
+    ggplot(aes(x = Cols, y = Rows, fill = value)) +
       geom_point(size = 30, shape = 22, alpha = 1) +
       scale_fill_gradient(low = "black", high = as.character(remarks[7, 2])) +
-      geom_text(aes(x = variable, y = Rows, label = numeric), color = "yellow", vjust = Inf) +
+      geom_text(aes(x = Cols, y = Rows, label = numeric), color = "yellow", vjust = Inf) +
       theme_bw(20)
   
-  Times <- paste0("Measured at ", remarks[1, 2], " ~ ", remarks[2, 2], ".   ")
-  Distance <- paste0("Distance between light and the measured surface: ", remarks[4, 2], ".   ")
-  Measurer <- paste0("Measured with ", remarks[3, 2], ".   ")
-  
-  Lights <- paste0("Light was provided by ", remarks[8, 2], ".   ")
-  Supplier <- paste0("Power supplied by ", remarks[9, 2], " with Amp: ", remarks[10,2], " and Volt: ", remarks[11, 2], ".   ")
-  
-  paste0(Times, Distance, Measurer, Lights, Supplier) %>%
-    list(Info = ., list(data = PFDdata, stats = PFDstat, map = PFDmap))
-  })
+  data.frame(Meas_Start = remarks[1, 2],
+             Meas_Fin = remarks[2, 2],
+             Meas_Instrument = remarks[3, 2],
+             Lamp_to_MeasSurface = remarks[4, 2],
+             LightInfo = remarks[6, 2],
+             LightSource = remarks[8, 2],
+             PowerSupply = remarks[9, 2],
+             Applied_Amp = remarks[10, 2],
+             Applied_Volt = remarks[11, 2]
+             ) %>%
+  mutate(ColorCode = paste0(remarks[7, 2], "@", chamID)) %>%
+  list(Info = ., list(data = PFDdata, stats = PFDstat, map = PFDmap))
+  }) %>%
 
 meas_infos <- 
   lapply(PFD_summary, "[[", 1) %>%
-  unlist %>%
-  as.character
+  rbind_all %>%
+  kable
 ```
 
 `r meas_infos`
 ```{r result_info}
-lapply(PFD_summary, "[[", 2)
+lapply(PFD_summary, "[[", 2) %>%
+  set_names(meas_infos$ColorCode)
 filePath %>% dir(pattern = "xlsx", full.names = T) %>% file.info %>% kable
 sessionInfo()
 ```
 
 ```{r eval = FALSE, echo = FALSE}
-home.dir()
-setwd("~/GitHub/BeeLabR/Environmental/PFDmap/")
-knit2html("./PFDwithExcel.Rmd", output = paste0("./", chamID, "_PFD.html"))
+  filePath <- 
+    readline("Enter the path to data file. ") 
+  home.dir()
+  knitr::knit2html("./environmental/PFDwithExcel.Rmd", output = paste0(filePath, "/", chamID, "_PFD.html"))
 ```
