--- a/EnvLogs/EnvLog.Rmd
+++ b/EnvLogs/EnvLog.Rmd
@@ -4,7 +4,7 @@ author: "KeachMurakami"
 date: "Febrary 1, 2016"
 output:
   html_document:
-    css: /Users/keach/Dropbox/R/Sources/markdown.css
+    css: Users/keach/Dropbox/R/markdown.css
 ---
 
 ```{r setup, eval = TRUE, echo = FALSE}
@@ -21,15 +21,14 @@ opts_chunk$set(eval = TRUE,
 if(OFFline) print("\n\n\n\n connect internet for read the function \n\n\n\n")
 
 # read function
-source_url("https://raw.githubusercontent.com/KeachMurakami/Environmental/master/EnvLogs/EnvLog.R")
+# source_url("https://raw.githubusercontent.com/KeachMurakami/Environmental/master/EnvLogs/EnvLog.R")
 
-readline("facte by chamber = T or F?: ") %>%
-EnvLog(EnvInfo, by_cham_facet = .)
+readline("facet by chamber = T or F?: ") %>%
+  EnvLog(EnvInfo, by_cham_facet = .)
 
 file.info(EnvInfo)
 sessionInfo()
 ```
-
 
 ```{r eval = F}
 EnvInfo <- file.choose()
